CSS responsivo e menu burger

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           </a>
         </div>
 
+        <input type="checkbox" id="menu-toggle" />
+        <label for="menu-toggle" class="menu-icon"> ☰ </label>
+
         <nav class="navbar">
           <a href="#home">Inicio</a>
           <a href="#projects">Projetos</a>
@@ -130,13 +133,24 @@
           <div class="form">
             <form>
               <label for="name">Nome</label>
-              <input type="text" id="name" placeholder="Nome Completo" required />
+              <input
+                type="text"
+                id="name"
+                placeholder="Nome Completo"
+                required
+              />
 
               <label for="email">E-mail</label>
-              <input type="email" id="email" placeholder="Seu melhor E-mail aqui" required />
+              <input
+                type="email"
+                id="email"
+                placeholder="Seu melhor E-mail aqui"
+                required
+              />
 
-              <label for="message" >Mensagem</label>
-              <textarea placeholder="Digite sua duvida aqui!"
+              <label for="message">Mensagem</label>
+              <textarea
+                placeholder="Digite sua duvida aqui!"
                 id="message"
                 name="message"
                 rows="5"
@@ -149,7 +163,15 @@
           </div>
 
           <div class="contact-info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116769.11432343957!2d-46.91811403557563!3d-23.85289717686755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cfb525924bc4bf%3A0x9d3e2907cfe36d11!2sEmbu-Gua%C3%A7u%2C%20SP%2C%2006900-000%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1757906914452!5m2!1spt-BR!2sus" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116769.11432343957!2d-46.91811403557563!3d-23.85289717686755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cfb525924bc4bf%3A0x9d3e2907cfe36d11!2sEmbu-Gua%C3%A7u%2C%20SP%2C%2006900-000%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1757906914452!5m2!1spt-BR!2sus"
+              width="500"
+              height="350"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
         </div>
       </section>
@@ -163,10 +185,6 @@
         </svg>
         <div class="footer-container">
           <p>&copy; 2025 - Piso Brilho. Todos os direitos reservados.</p>
-          <p>
-            Desenvolvido por <span>Rafael Cayres. Contato: </span
-            ><a href="mailto:contato@exemplo.com">rafaelcayress@gmail.com</a>
-          </p>
         </div>
       </footer>
     </main>
