--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="/">
-            <img src="assets/logo.png" alt="piso-brilho-logo" />
+          <a href="home">
+            <img src="assets/logo.svg" alt="piso-brilho-logo" />
           </a>
         </div>
 
         <input type="checkbox" id="menu-toggle" />
-        <label for="menu-toggle" class="menu-icon"> ☰ </label>
+        <label for="menu-toggle" class="menu-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
 
         <nav class="navbar">
           <a href="#home">Inicio</a>
@@ -179,7 +183,7 @@
       <footer>
         <svg viewBox="0 0 1440 150" xmlns="http://www.w3.org/2000/svg">
           <path
-            fill="#f9e2c0"
+            fill="rgb(191, 253, 255)"
             d="M0,64 C480,192 960,0 1440,96 L1440,160 L0,160Z"
           ></path>
         </svg>
