--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="home">
-            <img src="assets/logo.svg" alt="piso-brilho-logo" />
+          <a href="#home">
+            <img src="assets/logo1.jpeg" alt="piso-brilho-logo" />
           </a>
+          
         </div>
 
         <input type="checkbox" id="menu-toggle" />
@@ -180,15 +181,10 @@
         </div>
       </section>
 
-      <footer>
-        <svg viewBox="0 0 1440 150" xmlns="http://www.w3.org/2000/svg">
-          <path
-            fill="rgb(191, 253, 255)"
-            d="M0,64 C480,192 960,0 1440,96 L1440,160 L0,160Z"
-          ></path>
-        </svg>
+      <footer class="footer-curve">
         <div class="footer-container">
-          <p>&copy; 2025 - Piso Brilho. Todos os direitos reservados.</p>
+          <h3>Piso Brilho</h3>
+          <p>&copy; 2025 - Todos os direitos reservados.</p>
         </div>
       </footer>
     </main>
