erros de responsividade corrigidos e js para fechar menu adicionado.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="logo">
           <a href="#home">
-            <img src="assets/logo1.jpeg" alt="piso-brilho-logo" />
+            <img src="assets/logonovo.png" alt="piso-brilho-logo" />
           </a>
           
         </div>
@@ -188,5 +188,6 @@
         </div>
       </footer>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
