Ajustes finais de responsividade

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </label>
 
         <nav class="navbar">
-          <a href="#home">Inicio</a>
+          <a href="#home">Início</a>
           <a href="#projects">Projetos</a>
-          <a href="#services">Servicos</a>
+          <a href="#services">Serviços</a>
           <a href="#contact">Contato</a>
         </nav>
       </div>
@@ -39,17 +39,25 @@
     <main>
       <section class="hero" id="home">
         <div class="hero-description">
-          <h1>Piso de qualidade</h1>
+          <h1>Quem somos?</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
-            ratione assumenda in voluptates debitis, laboriosam doloribus iure
-            asperiores velit voluptatum numquam architecto consequuntur
-            voluptate quae nulla. Saepe in quidem animi.
+            Com mais de 25 anos de experiência, a Piso Brilho é especialista em
+            tratamento e restauração de pisos nobres. Atuamos com excelência em
+            granilite, polimento de ardósia e piso fulget, oferecendo soluções
+            completas para revitalizar e prolongar a durabilidade dos ambientes.
+            Nossa equipe qualificada alia tradição, técnica e equipamentos
+            modernos para entregar resultados superiores, sempre prezando pelo
+            brilho e pela satisfação dos clientes.
           </p>
-          <button class="quote-button">Solicite um orcamento</button>
+          <div class="quote-container"">
+            <button class="quote-button" id="btnWhatsapp">
+              Solicite um orçamento<img class="whatsapp-icon" src="assets/whatsapp.png">
+            </button>
+            
+          </div>
         </div>
         <div class="hero-img">
-          <img src="assets/piso1.jpg" alt="imagem-fazendo-piso" />
+          <img class="whatsapp-img" src="assets/piso1.jpg" alt="imagem-fazendo-piso" />
         </div>
       </section>
 
@@ -57,36 +65,36 @@
         <div class="projects-description">
           <h2>Nossos Projetos</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis
-            libero expedita, dignissimos veritatis debitis commodi dolorum alias
-            quis provident corporis iste voluptas aliquid, praesentium dicta
-            esse, reprehenderit inventore fugit velit.
+            Ao longo de mais de 25 anos, a Piso Brilho tem orgulho de participar
+            de projetos que valorizam ambientes e transformam pisos em
+            verdadeiras obras de arte. De residências a grandes empreendimentos
+            comerciais, nossos trabalhos com granilite, ardósia e piso fulget
+            refletem a união de técnica, qualidade e dedicação. Cada projeto é
+            planejado e executado com cuidado para garantir resultados
+            duradouros, estéticos e de alto padrão.
           </p>
         </div>
 
         <div class="card-section">
           <div class="project-card">
             <img src="assets/img1.jpg" alt="caminho" />
-            <h3>Passarela</h3>
+            <h3>Granilite</h3>
             <p>
-              Serviço realizado em piso de granilite com acabamento impecável,
-              garantindo durabilidade, resistência e um visual sofisticado.
+              Piso decorativo de cimento e pedras, polido e restaurado, ideal para áreas internas e comerciais.
             </p>
           </div>
           <div class="project-card">
             <img src="assets/img2.jpg" alt="escada" />
-            <h3>Escadaria</h3>
+            <h3>Ardósia</h3>
             <p>
-              Serviço realizado em piso de granilite com acabamento impecável,
-              garantindo durabilidade, resistência e um visual sofisticado.
+              Pedra natural para pisos internos e externos, polida, impermeabilizada e revitalizada, protege e valoriza ambientes.
             </p>
           </div>
           <div class="project-card">
             <img src="assets/img3.jpg" alt="piso-brilhando" />
-            <h3>Piso Granilite Polido</h3>
+            <h3>Piso Fulget</h3>
             <p>
-              Serviço realizado em piso de granilite com acabamento impecável,
-              garantindo durabilidade, resistência e um visual sofisticado.
+              Acabamento granular resistente, usado em áreas externas e comerciais, restaurado para brilho, durabilidade e segurança.
             </p>
           </div>
         </div>
@@ -94,38 +102,38 @@
 
       <section class="projects" id="services">
         <div class="projects-description">
-          <h2>Nossos Servicos</h2>
+          <h2>Nossos Serviços</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis
-            libero expedita, dignissimos veritatis debitis commodi dolorum alias
-            quis provident corporis iste voluptas aliquid, praesentium dicta
-            esse, reprehenderit inventore fugit velit.
+            A Piso Brilho oferece soluções completas para pisos nobres,
+            incluindo polimento, limpeza profunda e restauração de granilite,
+            polimento, impermeabilização e revitalização de ardósia, e
+            tratamento e manutenção de brilho de piso fulget. Atuamos em
+            residências, comércios e grandes empreendimentos, sempre com
+            experiência, técnica e equipamentos modernos para garantir
+            durabilidade, estética e qualidade em cada serviço.
           </p>
         </div>
 
         <div class="card-section">
           <div class="project-card">
-            <img src="assets/servicos-imgs.jpg" alt="" />
-            <p>titulo 1</p>
+            <img src="assets/granilite.jpg" alt="piso-de-granilite" />
+            <h3>Granilite</h3>
             <p>
-              Serviço realizado em piso de granilite com acabamento impecável,
-              garantindo durabilidade
+              Piso decorativo de cimento e pedras, polido e restaurado, ideal para áreas internas e comerciais.
             </p>
           </div>
           <div class="project-card">
-            <img src="assets/servicos-imgs.jpg" alt="" />
-            <p>titulo 2</p>
+            <img src="assets/ardosia.jpg" alt="piso-ardosia" />
+            <h3>Ardósia</h3>
             <p>
-              Serviço realizado em piso de granilite com acabamento impecável,
-              garantindo durabilidade
+              Pedra natural para pisos internos e externos, polida, impermeabilizada e revitalizada, protege e valoriza ambientes.
             </p>
           </div>
           <div class="project-card">
-            <img src="assets/servicos-imgs.jpg" alt="" />
-            <p>titulo 3</p>
+            <img src="assets/fulget.jpg" alt="piso-fulget" />
+            <h3>Piso Fulget</h3>
             <p>
-              Serviço realizado em piso de granilite com acabamento impecável,
-              garantindo durabilidade
+              Acabamento granular resistente, usado em áreas externas e comerciais, restaurado para brilho, durabilidade e segurança.
             </p>
           </div>
         </div>
@@ -167,28 +175,15 @@
               <button type="submit" class="sent-button">Enviar</button>
             </form>
           </div>
-
-          <div class="contact-info">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116769.11432343957!2d-46.91811403557563!3d-23.85289717686755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cfb525924bc4bf%3A0x9d3e2907cfe36d11!2sEmbu-Gua%C3%A7u%2C%20SP%2C%2006900-000%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1757906914452!5m2!1spt-BR!2sus"
-              width="500"
-              height="350"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
         </div>
       </section>
-
-      <footer class="footer-curve">
-        <div class="footer-container">
-          <h3>Piso Brilho</h3>
-          <p>&copy; 2025 - Todos os direitos reservados.</p>
-        </div>
-      </footer>
     </main>
+    <footer class="footer">
+      <div class="footer-container">
+        <h3>Piso Brilho</h3>
+        <p>&copy; 2025 - Todos os direitos reservados.</p>
+      </div>
+    </footer>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="script.js"></script>
   </body>
